projects/compiler/test/typechecker/assignment/accessor_error_method.1.out
Error at %FILE_NAME%:6:3
Cannot assign to method 'foo'
  |  f.foo = "abcd"
       ^
'foo' is a method, which cannot be overwritten
